nullaway_error_a671a047-2501-4931-b04d-472b8e3d7042.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TilesetEntry.java:100: error: [NullAway] dereferenced expression this.tileset.getSpritesheet() is @Nullable
    return this.tileset.getSpritesheet().getSprite(this.getId(), this.tileset.getMargin(), this.tileset.getSpacing());
                                        ^
    (see http://t.uber.com/nullaway )
